--- a/app/templates/legal-status.njk
+++ b/app/templates/legal-status.njk
@@ -27,11 +27,6 @@
         }) }}
       </form>
     </div>
-    {{ sideBar("Eligibility","You can apply if you are a:",
-    [
-      "Sole trader","Partnership","Ltd company","Charity","Public organisation","Trust",
-      "Limited liability partnership","Community interest company","Local authority",
-      "Limited partnership","Industrial and provident society","Co-operative society (Co-Op)","Community benefit society (BenCom)"
-    ]) }}
+    {{ sideBar("Eligibility","Public organisations and local authorities cannot apply for this grant.",null) }}
   </div>
 {% endblock %}
