--- a/app/templates/project-details.njk
+++ b/app/templates/project-details.njk
@@ -27,7 +27,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-l">Project details</h1>
+      <h1 class="govuk-heading-l">What impact will the project have?</h1>
       <form method="POST" action="{{ formActionPage }}" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
         {{ govukCheckboxes(checkboxes) }}
