--- a/app/templates/project-summary.njk
+++ b/app/templates/project-summary.njk
@@ -6,7 +6,7 @@
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "./components/macro.njk" import crumbToken, sideBar, conditionalButtons %}
 {% block pageTitle %}
-  {{siteTitle}} - Project details
+  {{siteTitle}} - Project summary
 {% endblock %}
 
 {% block beforeContent %}
