--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -5,9 +5,9 @@
 {% set urlPrefix = "<%= htmlWebpackPlugin.options.metadata.urlPrefix %>" %}
 {% set assetPath = urlPrefix + "/assets" %}
 {% set siteTitle = "Check if you can apply for a Farming Transformation Fund water grant" %}
-
+{% set startPageUrl1 = ""%}
 {% block pageTitle %}
-  {{siteTitle}}
+ {{startPageUrl}} {{siteTitle}}
 {% endblock %}
 
 {% block head %}
@@ -35,11 +35,6 @@
 {% endblock %}
 
 {% block bodyStart %}
- {% for item in cookiesPolicy %}
- {{item}}
- {% for k,v in item %}
-      {{k}}: {{v}}sa
-   {% endfor %}{% endfor %}
   {% if not cookiesPolicy.confirmed %}
     {% include "cookies/cookie-banner.njk" %}
   {% endif %}
