text update farming type

--- a/app/templates/farming-type.njk
+++ b/app/templates/farming-type.njk
@@ -30,7 +30,7 @@
     {{ sideBar("Eligibility","This grant is for:",
     [
       "arable and horticultural farming businesses supplying the food industry",
-      "nurseries growing flowers",
+      "nurseries growing ornamentals",
       "forestry nurseries"
     ]) }}
   </div>
