farmer detail design update

--- a/app/templates/check-details.njk
+++ b/app/templates/check-details.njk
@@ -132,6 +132,7 @@
             }
           },
           {
+          classes: 'govuk-summary-list__row--no-border',
             key: {
               text: "Business name"
             },
