--- a/app/templates/check-details.njk
+++ b/app/templates/check-details.njk
@@ -161,29 +161,7 @@
       {% endif %}
 
       {% if farmerDetails %}
-      {{ govukSummaryList({
-        rows: [
-          {
-            key: {
-              html: "<h1 class='govuk-heading-m'>Farmer's details</h1>"
-            },
-            value: {
-              text: ""
-            },
-            actions: {
-              items: [
-                {
-                  href: farmerDetailsLink,
-                  text: "Change",
-                  visuallyHiddenText: "farmer-details"
-                }
-              ]
-            }
-          }
-        ]
-      }) }}
-      {{ govukSummaryList({
-        rows: [
+      {% set farmerfarmerSummaryItems = [
           {
             key: {
               text: "Name"
@@ -208,8 +186,41 @@
               html: farmerAddressDetails
             }
           }
+        ] %}
+
+      {% if farmerGender %}
+      {% set farmerSummaryItems = (farmerSummaryItems.splice(1, 0,{
+            key: {
+              text: "Gender"
+            },
+            value: {
+              text:  farmerGender
+            }
+          }), farmerSummaryItems)%}
+      {% endif %}
+
+      {{ govukSummaryList({
+        rows: [
+          {
+            key: {
+              html: "<h1 class='govuk-heading-m'>Farmer's details</h1>"
+            },
+            value: {
+              text: ""
+            },
+            actions: {
+              items: [
+                {
+                  href: farmerDetailsLink,
+                  text: "Change",
+                  visuallyHiddenText: "farmer-details"
+                }
+              ]
+            }
+          }
         ]
       }) }}
+      {{ govukSummaryList({ rows: farmerSummaryItems }) }}
       {% endif %}
 
     </div>
