fixing score page redirect

--- a/app/templates/check-details.njk
+++ b/app/templates/check-details.njk
@@ -161,7 +161,7 @@
       {% endif %}
 
       {% if farmerDetails %}
-      {% set farmerfarmerSummaryItems = [
+      {% set farmerSummaryItems = [
           {
             key: {
               text: "Name"
