--- a/app/templates/irrigation-systems.njk
+++ b/app/templates/irrigation-systems.njk
@@ -2,8 +2,10 @@
 
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
+{% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 {% from "./components/macro.njk" import crumbToken, sideBar, conditionalButtons%}
+
 {% block pageTitle %}
   {{siteTitle}} - Irrigation systems
 {% endblock %}
@@ -24,16 +26,29 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-l">{{pageTitle}}</h1>
+
       <form method="POST" action="{{ formActionPage }}" autocomplete="off" novalidate="novalidate">
         {{ crumbToken(crumb)}}
-        {{ govukCheckboxes(irrigationCurrent) }}
+
+        {% if currentlyIrrigating %}
+          {{ govukCheckboxes(irrigationCurrent) }}
+        {% else %}
+          {{ govukInput(mockCheckbox) }}
+        {% endif %}
+
         {{ govukCheckboxes(irrigationPlanned) }}
         {{ conditionalButtons(hasScore) }}
       </form>
     </div>
-    {{ sideBar("Funding priorities","RPA wants to fund projects that:",
-    [
-      "improve the environment","improve water sustainability"
-    ]) }}
+
+    {{ 
+      sideBar(
+        "Funding priorities","RPA wants to fund projects that:",
+        [
+          "improve the environment","improve water sustainability"
+        ]
+      )
+    }}
   </div>
 {% endblock %}
