--- a/app/templates/next-steps.njk
+++ b/app/templates/next-steps.njk
@@ -32,7 +32,13 @@
         RPA will email you when applications open
       </h2>
       <p class="govuk-body">
-        RPA will be in touch when the full application period opens. They’ll give you the application form and any guidance you need to submit a full application.
+        RPA will be in touch when the full application period opens. 
+        <br/><br/>
+        They will tell you if your project scored well enough to be sent the full application form.
+        <br/><br/>
+        Value for money will be assessed alongside the funding priorities at full application stage and this may impact your overall project score.
+        <br/><br/>
+        The likelihood of a full application being successful will also depend on the number and value of applications we receive.
       </p><br/><br/>
       {{ govukWarningText({
         html: "<h2 class='govuk-heading-m'>You must not start the project.</h2>",
