1225 - fix /confirmation page

--- a/app/templates/confirmation.njk
+++ b/app/templates/confirmation.njk
@@ -15,17 +15,39 @@
     <div class="govuk-main-wrapper--auto-spacing">
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds  govuk-body">
-          <p>You will get an email with a record of your answers.</p> 
-          <p>If you do not get an email within 72 hours, please call the RPA helpline and follow the options for the Farming Transformation Fund scheme:</p> 
-          <p>Telephone: <b>03000 200 301</b></p> 
-          <p>Monday to Friday, 9am to 5pm (except public holidays)</p> 
-          <p><a target="_blank" href="https://www.gov.uk/call-charges">Find out about call charges</a></p> 
-        </div>
-      </div>
+          <p>We have sent you a confirmation email with a record of your answers.</p> 
+          <p>If you do not get an email within 72 hours, please contact RPA helpline and follow the options for Farming Transformation Fund scheme:</p> 
+          <br/>
 
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds  govuk-body">
-          <p>RPA will be in touch when the full application period opens. They’ll tell you about the application form and any guidance you need to submit a full application.</p>
+          <h1 class="govuk-heading-l">RPA helpline</h1>
+          <h1 class="govuk-heading-m">Telephone</h1>
+          <p>Telephone: 03000 200 301</p> 
+          <p>Monday to Friday, 9am to 5pm (except public holidays)</p> 
+          <p><a target="_blank" href="https://www.gov.uk/call-charges">Find out about call charges</a></p>
+
+          <h1 class="govuk-heading-m">Email</h1>
+          <p><a target="_blank" href="mailto://ftf@rpa.gov.uk">FTF@rpa.gov.uk</a></p>
+          <br/>
+
+          <h1 class="govuk-heading-l">What happens next</h1>
+          <ol>
+            <li>
+              RPA will be in touch when the full application period opens.
+              They will tell you if your project scored well enough to get the full application form.
+            </li>
+            <br/>
+
+            <li>
+              If you submit an application, RPA will assess it against other projects and value for money.
+              You will not automatically get a grant.
+              The grant is expected to be highly competitive and you are competing against other projects.
+            </li>
+            <br/>
+
+            <li>
+              If your application is successful, you'll be sent a funding agreement and can begin work on the project.
+            </li>
+          </ol>
         </div>
       </div>
 
@@ -42,7 +64,6 @@
           <li>get quotes from suppliers</li>
           <li>apply for planning permission or an abstraction licence</li>
         </ul>
-        <p><b>You will not automatically get a grant.</b> The grant is expected to be highly competitive and you are competing against other projects.</p>
     </div>
   </div>
 
