--- a/app/templates/irrigated-crops.njk
+++ b/app/templates/irrigated-crops.njk
@@ -3,10 +3,13 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
+{% from "govuk/components/input/macro.njk" import govukInput %}
 {% from "./components/macro.njk" import crumbToken, sideBar, conditionalButtons %}
+
 {% block pageTitle %}
   {{siteTitle}} - Irrigated crops
 {% endblock %}
+
 {% block beforeContent %}
   {{ govukBackLink({
     text: "Back",
@@ -20,7 +23,14 @@
       <form method="POST" action="{{ formActionPage }}" autocomplete="off" novalidate>
         {{ crumbToken(crumb)}}
         {{ govukRadios(radios) }}
+        {{ govukInput({
+        id: 'score',
+        name: 'score',
+        value: hasScore,
+        type: 'hidden'
+        }) }}
         {{ conditionalButtons(hasScore) }}
+
       </form>
     </div>
     {{ sideBar("Funding priorities","RPA wants to fund projects that:",
