link text update

--- a/app/templates/confirm.njk
+++ b/app/templates/confirm.njk
@@ -50,10 +50,11 @@
   </div>
 
   <div class="govuk-grid-row govuk-body">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
+      <hr/>
       <p>
-        The Department for Environment, Food and Rural Affairs (Defra) is the data controller for personal data you give to RPA. For information on how we handle personal data go to GOV.UK and search
-        <a href="https://www.gov.uk/government/organisations/rural-payments-agency/about/personal-information-charter" target="_blank" rel="noopener noreferrer">Rural Payments Agency personal information charter.</a>
+        The Department for Environment, Food and Rural Affairs (Defra) is the data controller for personal data you give to RPA. For information on how we handle personal data go to <a href="https://www.gov.uk" target="_blank" rel="noopener noreferrer">GOV.UK (opens in a new tab)</a> and search
+        <a href="https://www.gov.uk/government/organisations/rural-payments-agency/about/personal-information-charter" target="_blank" rel="noopener noreferrer">Rural Payments Agency personal information charter (opens in a new tab).</a>
       </p>
     </div>
   </div>
