--- a/app/templates/confirmation.njk
+++ b/app/templates/confirmation.njk
@@ -23,7 +23,7 @@
           <h1 class="govuk-heading-m">Telephone</h1>
           <p>Telephone: 03000 200 301</p> 
           <p>Monday to Friday, 9am to 5pm (except public holidays)</p> 
-          <p><a target="_blank" href="https://www.gov.uk/call-charges">Find out about call charges</a></p>
+          <p><a target="_blank" href="https://www.gov.uk/call-charges">Find out about call charges (opens in a new tab)</a></p>
 
           <h1 class="govuk-heading-m">Email</h1>
           <p><a target="_blank" href="mailto://ftf@rpa.gov.uk">FTF@rpa.gov.uk</a></p>
@@ -67,5 +67,5 @@
     </div>
   </div>
 
-  <p class="govuk-body"><a href={{ output.surveyLink }} target="_blank" rel="noopener noreferrer">What do you think of this service?</a></p>
+  <p class="govuk-body"><a href={{ output.surveyLink }} target="_blank" rel="noopener noreferrer">What do you think of this service? (opens in a new tab)</a></p>
 {% endblock %}
