--- a/app/templates/components/macro.njk
+++ b/app/templates/components/macro.njk
@@ -37,14 +37,14 @@
   </div>
 {% endmacro %}
 
-{% macro conditionalButtons (hasScore) %}
+{% macro conditionalButtons (hasScore,secondryText='Back to score') %}
 {{ govukButton({
             text: "Continue"
           }) }} &nbsp;
   {% if hasScore %}
     {{ govukButton({
       classes: "govuk-button--secondary",
-      text: "Back to score",
+      text: secondryText ,
       name: "results",
     value: "results"
   }) }}
