--- a/app/templates/score.njk
+++ b/app/templates/score.njk
@@ -67,7 +67,7 @@
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             <th scope="col" class="govuk-table__header">Answers</th>
-            <th scope="col" class="govuk-table__header">Your score</th>
+            <th scope="col" class="govuk-table__header">Score</th>
             <th scope="col" class="govuk-table__header ">Funding priorities</th>
             <th scope="col" class="govuk-table__header"> </th>
           </tr>
