--- a/app/assets/src/application.scss
+++ b/app/assets/src/application.scss
@@ -34,7 +34,7 @@ $govuk-assets-path: "~govuk-frontend/govuk/assets/";
 
 .check-detail-heading {
   width: 90%;
-  padding: 10px 20px 10px 0;
+  padding: 10px 20px 0 0;
   text-align: left;
   vertical-align: top;
   font-weight: 700;
@@ -43,7 +43,7 @@ $govuk-assets-path: "~govuk-frontend/govuk/assets/";
 
 .check-detail-change {
   display: table-cell;
-  padding: 10px 0 10px 0;
+  padding: 10px 0 0 0;
   text-align: right;
   vertical-align: top;
 }
