--- a/app/templates/irrigation-water-source.njk
+++ b/app/templates/irrigation-water-source.njk
@@ -47,17 +47,22 @@
     {{ 
       multiSideBar([
         {
-          heading:"Funding priorities",para:"RPA wants to fund projects that:",
-          items:[
-            "improve the environment",
-            "improve water sustainability"
-          ]
-        },
-        { 
-          para:"RPA will not fund projects where water is supplied by:",
-          items:[
-            "summer water surface abstraction",
-            "mains"
+          heading:"Funding priorities",
+          content: [
+            {
+              para:"RPA wants to fund projects that:",
+              items:[
+                "improve the environment",
+                "improve water sustainability"
+              ]
+            },
+            { 
+              para:"RPA will not fund projects where water is supplied by:",
+              items:[
+                "summer water surface abstraction",
+                "mains"
+              ]
+            }
           ]
         }
       ])
